# ozz-animation

./: .gitignore  .travis.yml  404.md  AUTHORS.md  CHANGES  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  LICENSE.md  README  README.md  _config.yml  appveyor.yml  build-helper.py  dashboard.html  documentation.html  index.html  index.md  params.json
contrib/glfw/: CMakeLists.txt  README.ozz
contrib/glfw/lib/: glext.c  image.c  stream.c  window.c
demo/: CMakeLists.txt
demo/blend/: CMakeLists.txt  demo_blend.cc
demo/collada/: CMakeLists.txt  demo_collada.cc
demo/collada_animation/: CMakeLists.txt  demo_collada_animation.cc
demo/framework/: CMakeLists.txt  application.cc  application.h  imgui.h  profile.cc  profile.h  renderer.h  utils.cc  utils.h
demo/framework/internal/: camera.cc  camera.h  imgui_impl.cc  imgui_impl.h  renderer_impl.cc  renderer_impl.h
demo/load/: CMakeLists.txt  demo_load.cc
demo/load_animation/: CMakeLists.txt  demo_load_animation.cc
demo/millipede/: CMakeLists.txt  demo_millipede.cc
howtos/: CMakeLists.txt  custom_animation_importer.cc  custom_skeleton_importer.cc  load_from_file.cc
samples/: CMakeLists.txt  index.md  populate_badges.js  sample_blend.js
samples/additive/: CMakeLists.txt  README  README.md  sample_additive.cc
samples/attach/: CMakeLists.txt  README  README.md  sample_attach.cc
samples/baked/: CMakeLists.txt  README  README.md  config.json  fbx2baked.cc  index.html  sample_baked.cc
samples/blend/: CMakeLists.txt  README  README.md  sample_blend.cc
samples/browse/: CMakeLists.txt  README.md  sample_browse.cc
samples/demo/: CMakeLists.txt  README.md  demo.cc
samples/emscripten/: sample_additive.html  sample_additive.js  sample_additive.wasm  sample_attach.html  sample_attach.js  sample_attach.wasm  sample_baked.html  sample_baked.js  sample_baked.wasm  sample_blend.html  sample_blend.js  sample_blend.wasm  sample_foot_ik.html  sample_foot_ik.js  sample_foot_ik.wasm  sample_look_at.html  sample_look_at.js  sample_look_at.wasm  sample_millipede.html  sample_millipede.js  sample_millipede.wasm  sample_motion_blend.html  sample_motion_blend.js  sample_motion_blend.wasm  sample_motion_extraction.html  sample_motion_extraction.js  sample_motion_extraction.wasm  sample_motion_playback.html  sample_motion_playback.js  sample_motion_playback.wasm  sample_multithread.js  sample_multithread.wasm  sample_optimize.html  sample_optimize.js  sample_optimize.wasm  sample_partial_blend.html  sample_partial_blend.js  sample_partial_blend.wasm  sample_playback.html  sample_playback.js  (+10 more)
samples/foot_ik/: CMakeLists.txt  README.md  sample_foot_ik.cc
samples/framework/: CMakeLists.txt  application.cc  application.h  gadget.cmake  gadget.xml.in  image.cc  image.h  imgui.h  mesh.cc  mesh.h  motion_utils.cc  motion_utils.h  profile.cc  profile.h  renderer.h  utils.cc  utils.h
samples/framework/internal/: anonymous.h  anonymous.ppm  arial.h  arial.ppm  arial16.h  arial16.ppm  arial18.h  arial18.ppm  arial24.h  arial24.ppm  arial32.h  arial32.ppm  arial64.h  arial64.ppm  camera.cc  camera.h  camigo.h  camigo.ppm  courier.h  courier.ppm  droid.h  droid.ppm  icosphere.h  imgui_impl.cc  imgui_impl.h  immediate.cc  immediate.h  renderer_impl.cc  renderer_impl.h  sdf.h  shader.cc  shader.h  shooter.cc  shooter.h
samples/framework/tools/: CMakeLists.txt  fbx2mesh.cc
samples/look_at/: CMakeLists.txt  README.md  sample_look_at.cc
samples/millipede/: CMakeLists.txt  README  README.md  sample_millipede.cc
samples/motion/: CMakeLists.txt  sample_motion.cc
samples/motion_blend/: CMakeLists.txt  README.md  sample_motion_blend.cc
samples/motion_extraction/: CMakeLists.txt  README.md  sample_motion_extraction.cc
samples/motion_playback/: CMakeLists.txt  README.md  sample_motion_playback.cc
samples/multithread/: CMakeLists.txt  README  README.md  sample_multithread.cc
samples/optimize/: CMakeLists.txt  README  README.md  sample_optimize.cc
samples/partial_blend/: CMakeLists.txt  README  README.md  sample_partial_blend.cc
samples/playback/: CMakeLists.txt  README  README.md  sample_playback.cc
samples/playback_skin/: CMakeLists.txt  README.md  sample_playback_skin.cc
samples/skin/: CMakeLists.txt  README  fbx2skin.cc  sample_skin.cc  skin_mesh.cc  skin_mesh.h
samples/skinning/: CMakeLists.txt  README.md  sample_skinning.cc
samples/two_bone_ik/: CMakeLists.txt  README.md  config.json  sample_two_bone_ik.cc
samples/user_channel/: CMakeLists.txt  README.md  config.json  sample_user_channel.cc
test/: CMakeLists.txt
test/animation/: CMakeLists.txt  blending_job_tests.cc  local_to_model_job_tests.cc  sampling_job_tests.cc
test/animation/offline/: CMakeLists.txt  additive_animation_builder_tests.cc  animation_builder_tests.cc  animation_constant_optimizer_tests.cc  animation_optimizer_tests.cc  animation_serialize_tests.cc  float_track_builder_tests.cc  float_track_optimizer_tests.cc  motion_extractor_tests.cc  raw_animation_archive_tests.cc  raw_animation_archive_versioning_tests.cc  raw_animation_utils_tests.cc  raw_skeleton_archive_tests.cc  raw_skeleton_archive_versioning_tests.cc  raw_track_archive_tests.cc  raw_track_utils_tests.cc  skeleton_builder_tests.cc  skeleton_serialize_tests.cc  track_builder_tests.cc  track_optimizer_tests.cc
test/animation/runtime/: CMakeLists.txt  animation_archive_tests.cc  animation_archive_versioning_tests.cc  animation_serialize_tests.cc  animation_utils_tests.cc  blending_job_tests.cc  float_track_sampling_job_tests.cc  ik_aim_job_tests.cc  ik_two_bone_job_tests.cc  local_to_model_job_tests.cc  motion_blending_job_tests.cc  sampling_job_tests.cc  skeleton_archive_tests.cc  skeleton_archive_versioning_tests.cc  skeleton_serialize_tests.cc  (+7 more)
test/base/: CMakeLists.txt  endianness_tests.cc  log_tests.cc  platform_tests.cc  span_tests.cc
test/geometry/: CMakeLists.txt
test/options/: CMakeLists.txt  options_registration_empty_tests.cc  options_registration_tests.cc  options_tests.cc
test/sub/: CMakeLists.txt  README.md  test_sub_project.cc
(+481 files in other folders)
